@@ -10,7 +10,7 @@ Description: default kernel image if nothing better is found
 Template: base-installer/kernel/image-2.6
 Type: string
 Default: kernel-image
-Default[hppa]: kernel-image-2.6.8-1-32
+Default[hppa]: kernel-image-2.6.8-2-32
 Default[i386]: kernel-image-2.6.8-2-386
 Default[ia64]: kernel-image-2.6.8-2-itanium-smp
 Description: default kernel image if nothing better is found (2.6)
