@@ -3,7 +3,7 @@ machine parisc
 majors 2.4 2.6
 flavour parisc32
 kernel-2.4 kernel-image-2.4.27-32-smp
-kernel-2.6 kernel-image-2.6.8-1-32-smp
+kernel-2.6 kernel-image-2.6.8-2-32-smp
 usable \
   kernel-image-2.4.25-32 \
   kernel-image-2.4.25-32-smp \
@@ -11,8 +11,8 @@ usable \
   kernel-image-2.4.26-32-smp \
   kernel-image-2.4.27-32 \
   kernel-image-2.4.27-32-smp \
-  kernel-image-2.6.8-1-32 \
-  kernel-image-2.6.8-1-32-smp
+  kernel-image-2.6.8-2-32 \
+  kernel-image-2.6.8-2-32-smp
 unusable \
   kernel-image-2.4.25-64 \
   kernel-image-2.4.25-64-smp \
@@ -20,5 +20,5 @@ unusable \
   kernel-image-2.4.26-64-smp \
   kernel-image-2.4.27-64 \
   kernel-image-2.4.27-64-smp \
-  kernel-image-2.6.8-1-64 \
-  kernel-image-2.6.8-1-64-smp
+  kernel-image-2.6.8-2-64 \
+  kernel-image-2.6.8-2-64-smp
