@@ -20,7 +20,7 @@ usable \
   kernel-image-2.6.7-1-itanium-smp \
   kernel-image-2.6.7-1-mckinley \
   kernel-image-2.6.7-1-mckinley-smp \
-  kernel-image-2.6.8-1-itanium \
-  kernel-image-2.6.8-1-itanium-smp \
-  kernel-image-2.6.8-1-mckinley \
-  kernel-image-2.6.8-1-mckinley-smp
+  kernel-image-2.6.8-2-itanium \
+  kernel-image-2.6.8-2-itanium-smp \
+  kernel-image-2.6.8-2-mckinley \
+  kernel-image-2.6.8-2-mckinley-smp
