@@ -12,7 +12,7 @@ usable \
   kernel-image-2.4.27-1-sparc32 \
   kernel-image-2.4.27-1-sparc32-smp \
   kernel-image-2.6-sparc32 \
-  kernel-image-2.6.8-1-sparc32
+  kernel-image-2.6.8-2-sparc32
 unusable \
   kernel-image-2.4-sparc64 \
   kernel-image-2.4-sparc64-smp \
@@ -23,6 +23,6 @@ unusable \
   kernel-image-2.6-sparc32-smp \
   kernel-image-2.6-sparc64 \
   kernel-image-2.6-sparc64-smp \
-  kernel-image-2.6.8-1-sparc32-smp \
-  kernel-image-2.6.8-1-sparc64 \
-  kernel-image-2.6.8-1-sparc64-smp
+  kernel-image-2.6.8-2-sparc32-smp \
+  kernel-image-2.6.8-2-sparc64 \
+  kernel-image-2.6.8-2-sparc64-smp
